--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
+		<link rel="stylesheet" href="css/animate.css">
 	</head>
 	<body>
 
@@ -27,14 +28,14 @@
 			<div class="container">
 				<div class="row">
 					<div class ="col-lg-7">
-						<img class="header-img" src="img/main-img.png" alt="монитор">
+						<img class="header-img wow fadeInLeftBig" src="img/main-img.png" alt="монитор">
 					</div>
 					<div class ="col-lg-5">
-						<p class="header-pretitle">Веб-дизайнер</p>
-						<h1 class=header-title >Виолетта Жужуленко</h1>
-						<p class="header-subtitle">Создание сайтов под ключ</p>
-						<div class="header-button-block">
-							<button class="header-button">Связаться</button>
+						<p class="header-pretitle wow fadeInRightBig " data-wow-delay=0.1s>Веб-дизайнер</p>
+						<h1 class="header-title wow fadeInRightBig " data-wow-delay=0.2s>Виолетта Жужуленко</h1>
+						<p class="header-subtitle wow fadeInRightBig" data-wow-delay=0.3s>Создание сайтов под ключ</p>
+						<div class="header-button-block wow fadeInRightBig" data-wow-delay=0.4s>
+							<a href="https://vk.com/violetta_zh" class="header-button">Связаться</a>
 							<small>*Это бесплатно</small>
 						</div>
 					</div>
@@ -44,7 +45,7 @@
 
 		<section class="portfolio">
 			<div class="container">
-				<div class="portfolio-block">
+				<div class="portfolio-block wow fadeIn">
 				<h2 class="portfolio-title">Портфолио</h2>
 				<p class="portfolio-subtitle">Мои работы</p>
 				<div class="row">
@@ -79,10 +80,10 @@
 					<div class="col-md-4">
 						<div class="social-block">
 							<p>Подпишитесь:</p>
-							<a href="#"><img src="img/socials/facebook-logo-button.png" alt="Facebook"></a>
-							<a href="#"><img src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
-							<a href="#"><img src="img/socials/telegram-symbol.png" alt="Telegram"></a>
-							<a href="#"><img src="img/socials/youtube-symbol.png" alt="YouTube"></a>
+							<a class="wow bounceInDown" data-wow-delay=0.1s href="#"><img   src="img/socials/facebook-logo-button.png" alt="Facebook"></a>
+							<a class="wow bounceInDown" data-wow-delay=0.2s href="#"><img   src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
+							<a class="wow bounceInDown" data-wow-delay=0.3s href="#"><img   src="img/socials/telegram-symbol.png" alt="Telegram"></a>
+							<a class="wow bounceInDown" data-wow-delay=0.4s href="#"><img   src="img/socials/youtube-symbol.png" alt="YouTube"></a>
 						</div>
 					</div>
 					<div class="col-md-4">
@@ -96,5 +97,9 @@
 		</footer>
 	</body>
 
+<script src="js/wow.min.js"></script>
+<script>
+	new WOW().init();
+</script>
 
 </html>
